--- a/Tutorial/web1/index.html
+++ b/Tutorial/web1/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html ng-app="plunker">
+<html ng-app="myApp">
 
   <head>
     <meta charset="utf-8" />
     <title>攝氏華氏轉換器 - Angular版</title>
-    <script data-require="angular.js@1.2.x" src="https://code.angularjs.org/1.2.25/angular.js" data-semver="1.2.25"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
     <script src="app.js"></script>
   </head>
 
   <body ng-controller="MainCtrl">
       攝氏:
-      <input type="text" ng-model="value_C" id="field_c" ng-value="value_C"/>
+      <input type="text" ng-model="value_C" id="field_c"/>
 
       華氏:
-      <input type="text" ng-model="value_F" id="field_f" ng-value="value_F"/>
+      <input type="text" ng-model="value_F" id="field_f"/>
 
       <br/>
 
